--- a/programs/prime-nest/Cargo.toml
+++ b/programs/prime-nest/Cargo.toml
@@ -20,3 +20,4 @@ idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
 anchor-spl = "0.30.1"
 pyth-solana-receiver-sdk = "0.3.2"
+hex = "0.4"
